--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+h1	{
+	font-family: Sans-Serif;
+	font-size: 108px;
+	text-align: center;
+	}
+h2	{
+	font-family: Serif;
+	font-size: 48px;
+	text-align: center;
+</style>
+</head>
+<body>
+<br>
+<h1>Astronaut Spy Doctor</h2>
+<br>
+<h2>Coming soon.</h2>
+</body>
+</html>
